Adding texts and max size to input

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -56,3 +56,20 @@ notAvailableViewTitle=Detalhe
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+#New Texts
+#Create
+drop=Drop files or use the &quot;Add&quot; button to keep files ready for upload
+titleForm=Criação de Contrato
+dataIni=Data de Início
+dataFim=Data de Fim
+save=Gravar
+canc=Cancelar
+
+#Detail
+ctrs=Contratos
+crea=Create
+dele=Delete
+
+#Edit
+formTitle=Editar Contrato
