--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,14 +3,14 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Contrato Fornecedor Divergente
+appTitle=Gestão de Contratos
 
 #YDES: Application description
-appDescription=Contrato Fornecedor Divergente
+appDescription=Gestão de Contratos
 #XTIT: Main view title
-title=Contrato Fornecedor Divergente
+title=Gestão de Contratos
 MasterPage=Fornecedores
-DetailPage=Contratos Divergentes
+DetailPage=Contratos de Factoring
 
 #XTIT: Detail view title
 Contrato=Contratos
@@ -59,7 +59,7 @@ errorText=Sorry, a technical error occurred! Please try again later.
 
 #New Texts
 #Create
-drop=Drop files or use the &quot;Add&quot; button to keep files ready for upload
+drop=Drop files or use the 'Add' button to keep files ready for upload
 titleForm=Criação de Contrato
 dataIni=Data de Início
 dataFim=Data de Fim
@@ -73,3 +73,10 @@ dele=Delete
 
 #Edit
 formTitle=Editar Contrato
+
+contratoNotFound=Contrato Não Preenchido
+initialDateNotFound=Data Inicial não Preenchida
+finalDateNotFound=Data Final não preenchida
+finalDateCheck=Data final deve ser maior que a data Inicial
+divSupNotFound=Fornecedor Divergente não preenchido
+supNotFound=Fornecedor não preenchido
