Adjust Special Character

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -80,3 +80,4 @@ finalDateNotFound=Data Final não preenchida
 finalDateCheck=Data final deve ser maior que a data Inicial
 divSupNotFound=Fornecedor Divergente não preenchido
 supNotFound=Fornecedor não preenchido
+noSpecialChar=Character Especial não permitido
