--- a/webapp/i18n/i18n_en_US.properties
+++ b/webapp/i18n/i18n_en_US.properties
@@ -80,3 +80,4 @@ finalDateNotFound=Final Date not Filled
 finalDateCheck=Final date must be greater than start date
 divSupNotFound=Factoring Supplier not Filled 
 supNotFound=Supplier not Filled
+noSpecialChar=Special Character not allowed
