adjust save busy state, edit messages, document errors

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -81,3 +81,4 @@ finalDateCheck=Data final deve ser maior que a data Inicial
 divSupNotFound=Fornecedor Divergente não preenchido
 supNotFound=Fornecedor não preenchido
 noSpecialChar=Character Especial não permitido
+noSameFile=O nome do arquivo não pode ser o mesmo ou já existir para este contrato!
