--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -81,3 +81,4 @@ finalDateCheck=Final date must be greater than start date
 divSupNotFound=Factoring Supplier not Filled 
 supNotFound=Supplier not Filled
 noSpecialChar=Special Character not allowed
+noSameFile=Please, change the file, Files with the same name was not allowed.
