Adjust after test - delete - edit - attachment

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -82,3 +82,7 @@ divSupNotFound=Fornecedor Divergente não preenchido
 supNotFound=Fornecedor não preenchido
 noSpecialChar=Character Especial não permitido
 noSameFile=O nome do arquivo não pode ser o mesmo ou já existir para este contrato!
+
+cpr=Criado por:
+e=em:
+h=hora:
