--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -82,3 +82,7 @@ divSupNotFound=Factoring Supplier not Filled
 supNotFound=Supplier not Filled
 noSpecialChar=Special Character not allowed
 noSameFile=Please, change the file, Files with the same name was not allowed.
+
+cpr=Created by:
+e=day:
+h=time:
