--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -9,7 +9,7 @@ appTitle=Contract Maintenance
 appDescription=Contract Maintenance
 #XTIT: Main view title
 title=Contract Maintenance
-MasterPage=Supplyers 
+MasterPage=Supplier 
 DetailPage=Factoring Contracts
 
 #XTIT: Detail view title
