Adjusts after client return on going... create new translator file to PT and config a attachment check

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -56,6 +56,7 @@ notAvailableViewTitle=Detail
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+missingContract=Please, attach a file to create/modify the contract.
 
 #New Texts
 #Create
