--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -56,6 +56,7 @@ notAvailableViewTitle=Detalhe
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+missingContract=Por favor anexe um arquivo para criar/modificar o contrato. 
 
 #New Texts
 #Create
