--- a/webapp/i18n/i18n_pt_PT.properties
+++ b/webapp/i18n/i18n_pt_PT.properties
@@ -57,6 +57,7 @@ notAvailableViewTitle=Detalhe
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
 missingContract=Por favor anexe um arquivo para criar/modificar o contrato. 
+deleteFile=Deseja deletar o arquivo? 
 
 #New Texts
 #Create
