Adjusts after tests. like screen texts, PT and EN. Page Controller, data view and Backend send request

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -71,7 +71,10 @@ canc=Cancel
 #Detail
 ctrs=Contracts
 crea=Create
+rem=Delete
 dele=Delete
+Contrato=Contract: 
+Desc=Contract Description
 
 #Edit
 formTitle=Change Contract
@@ -88,3 +91,26 @@ noSameFile=Please, change the file, Files with the same name was not allowed.
 cpr=Created by:
 e=day:
 h=time:
+
+#Return Messages
+#Edit
+editOK=Successfully edited.
+editNOK=Problem while editing.
+fileLenght=File length exceeded.
+fileSize=File size exceeded.
+
+#Create
+createOK=Successfully created.
+createNOK=Problem creating.
+recordNOK=Record not created, contact support.
+
+supplierNOK=A supplier must be selected.
+ctrBlanc=Blank contract.
+ctrNotSelected=No contract selected.
+NoData=No Data
+
+#Delete
+deleteT=All information including attachments will be deleted. Do you wish to continue?
+deleteOK=Successfully deleted.
+deleteNOK=Cannot delete, contract already used.
+
