--- a/webapp/i18n/i18n_pt_PT.properties
+++ b/webapp/i18n/i18n_pt_PT.properties
@@ -57,11 +57,11 @@ notAvailableViewTitle=Detalhe
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
 missingContract=Por favor anexe um arquivo para criar/modificar o contrato. 
-deleteFile=Deseja deletar o arquivo? 
+deleteFile=Deseja eliminar o ficheiro?
 
 #New Texts
 #Create
-drop=Drop files or use the 'Add' button to keep files ready for upload
+drop=Arraste ficheiros ou use o botão '+' para carerga-los.
 titleForm=Criação de Contrato
 dataIni=Data de Início
 dataFim=Data de Fim
@@ -70,8 +70,11 @@ canc=Cancelar
 
 #Detail
 ctrs=Contratos
-crea=Create
-dele=Delete
+crea=Criar
+rem=Eliminar
+dele=Deletar
+Contrato=Contrato: 
+Desc=Descrição do Contrato
 
 #Edit
 formTitle=Editar Contrato
@@ -88,3 +91,25 @@ noSameFile=O nome do arquivo não pode ser o mesmo ou já existir para este cont
 cpr=Criado por:
 e=em:
 h=hora:
+
+#Return Messages 
+#Edit
+editOK=Editado com sucesso.
+editNOK=Problema ao editar.
+fileLenght=Comprimento do arquivo excedido.
+fileSize=Tamanho do arquivo excedido.
+
+#Create
+createOK=Criado com sucesso.
+createNOK=Problema ao criar.
+recordNOK=Registro não criado, contacte o suporte.
+
+supplierNOK=Um fornecedor deve ser selecionado.
+ctrBlanc=Contrato em branco.
+ctrNotSelected=Nenhum contrato selecionado.
+NoData=Sem Dados
+
+#Delete
+deleteT=Toda a informação, incluindo anexos irá ser eliminada. Deseja continuar?
+deleteOK=Eliminado com sucesso.
+deleteNOK=Não é possível deletar, contrato já utilizado.
